EMMR-107 Correct invisible paragraph labels in recipe edit form

--- a/custom/themes/emmr_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/emmr_lib_unb_ca/src/scss/style.scss
@@ -390,6 +390,14 @@ div.form-item-field-recipe-date-to-value-max {
   margin-bottom: 10px;
 }
 
+#node-emmr-recipe-edit-form {
+  h4.label {
+    font-size: 14px;
+    font-weight: 700;
+    color: #4a4a4a;
+  }
+}
+
 // Global Search Form
 #edit-combine {
   width: 360px;
